--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <div class="splash-screen" id="splash">
-    <h1>Welcome Student 👋</h1>
+    <h1>Welcome Student!! 👋</h1>
   </div>
 
   <div class="login-container">
